<resources>
    <string name="app_name">Horus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip"><u>Skip</u></string>
    <string name="sign_in_to_start">Sign in to start \nplanning your trip.</string>
    <string name="terms_of">By proceeding, you agree to our <u><b>Team of Use</b></u> and confirm you have read our <u><b>Privacy and Cookie Statement</b></u>.</string>
    <string name="create_your">Create your Account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="password_information">Enter a combination of at least six numbers, letters and punctuation marks.</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_sign_in"> Sign in</string>
    <string name="discover_travel_text">Discover traveler recommended spots near you, wherever you are.</string>
    <string name="button_allow_location">Allow location data</string>
    <string name="not_now"><u>Not now</u></string>
    <string name="let_s_get_basics">Let’s get basics so we can give you the goods.</string>
    <string name="what_should">What should we call you?</string>
    <string name="your_name">Your Name</string>
    <string name="where_do_yo">Where do you live? (Optional)</string>
    <string name="your_country">Your Country</string>
    <string name="next_button">Next</string>
    <string name="custom_dialog_text">Allow Horus to access this device’s location</string>
    <string name="while_using"> while using the app</string>
    <string name="only_this_time">Only this time</string>
    <string name="deny">Deny</string>
    <string name="explore">Let\'s start \nyour vacation!</string>
    <string name="do_not_miss">Do not miss the \nEgyptian event</string>

    <string name="event">Lorem ipsum dolor sit amet consectetur. Purus in sem habitant urna dolor vitae non purus. Sem aliquam feugiat ut varius. Mattis auctor... <u><b>See more</b></u></string>

    <string name="Dubai"><u>Dubai</u></string>
    <string name="Visit_website"><u>Visit website</u></string>
    <string name="Read_more"><u>Read more</u></string>
    <string name="AI_Barsha_Road"><u>AI Barsha Road, Dubai 72584 United Arab      Emirates</u></string>
    <string name="Reviews"><u>Reviews</u></string>
    <string name="Q_A">Q&amp;A</string>
    <string name="cairo"><u>Cairo</u></string>
    <string name="call"><u>Call</u></string>
    <string name="information"><u>1024 Cameron St Corner of Cameron and Henry, Alexandria, VA 22314-2427</u></string>
    <string name="see_more"><u>See more</u></string>
    <string name="the_egyptain"><u>The Egyptian Museum</u></string>
    <string name="alexandria"><u>Alexandria</u></string>
    <string name="Egypt_Cairo"><u>Egypt/Cairo</u></string>
    <string name="inform"><u>1024 Cameron St Corner of Cameron and Henry, Alexandria, VA 22314-2427</u></string>
    <string name="giza"><u>Giza</u></string>
    <string name="pyr_address"><u>1024 Cameron St Corner of Cameron and Henry, Alexandria, VA 22314-2427</u></string>
    <string name="setting">Setting &amp; privacy</string>

</resources>