<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.activity.PersonInformationActivity">


     <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
          <ImageView
              android:id="@+id/iv_ellipse_image_person"
              android:layout_width="84dp"
              android:layout_height="84dp"
              android:layout_marginLeft="24dp"
              android:layout_marginTop="76dp"
              android:src="@drawable/ellipse"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />
          <ImageView
              android:id="@+id/iv_location_image"
              android:layout_width="38dp"
              android:layout_height="45dp"
              android:src="@drawable/baseline_person_24"
              app:layout_constraintBottom_toBottomOf="@+id/iv_ellipse_image_person"
              app:layout_constraintEnd_toEndOf="@+id/iv_ellipse_image_person"
              app:layout_constraintStart_toStartOf="@+id/iv_ellipse_image_person"
              app:layout_constraintTop_toTopOf="@+id/iv_ellipse_image_person" />
          <TextView
              android:id="@+id/tv_let_s_get_basics"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="53dp"
              android:fontFamily="@font/poppins_medium"
              android:lineHeight="36sp"
              android:text="@string/let_s_get_basics"
              android:textColor="@color/black"
              android:textSize="24sp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/iv_ellipse_image_person"
              android:layout_marginEnd="24dp"
              android:layout_marginStart="24dp"

              />

          <TextView
              android:id="@+id/tv_call_you"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="56dp"
              android:layout_marginStart="32dp"
              android:layout_marginEnd="24dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/tv_let_s_get_basics"
              android:text="@string/what_should"
              android:textSize="14sp"
              android:fontFamily="@font/poppins_medium"
              android:lineHeight="21sp"
              android:textColor="@color/black"
              />

          <EditText
              android:id="@+id/ed_your_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="4dp"
              android:layout_marginLeft="32dp"
              android:layout_marginRight="32dp"
              android:inputType="textPersonName"
              android:hint="@string/your_name"
              android:paddingStart="16dp"
              android:paddingEnd="16dp"
              android:textSize="14sp"
              android:lineHeight="21sp"
              android:textColor="@color/black500"
              android:fontFamily="@font/poppins_regular"
              android:background="@drawable/sign_up_edit_text_shape"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/tv_call_you" />

          <TextView
              android:id="@+id/tv_live"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="24dp"
              android:lineHeight="21sp"
              android:text="@string/where_do_yo"
              android:textColor="@color/black"
              android:textSize="14sp"
              android:layout_marginEnd="24dp"
              android:layout_marginStart="32dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/ed_your_name" />
          <EditText
              android:id="@+id/ed_your_country"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="4dp"
              android:layout_marginLeft="32dp"
              android:layout_marginRight="32dp"
              android:inputType="textCapWords"
              android:hint="@string/your_country"
              android:paddingEnd="16dp"
              android:paddingStart="16dp"
              android:textSize="14sp"
              android:lineHeight="21sp"
              android:textColor="@color/black500"
              android:fontFamily="@font/poppins_regular"
              android:background="@drawable/sign_up_edit_text_shape"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/tv_live" />

          <androidx.appcompat.widget.AppCompatButton
              android:id="@+id/btn_next"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="36dp"
              android:layout_marginStart="32dp"
              android:layout_marginEnd="32dp"
              android:layout_below="@+id/ed_your_country"
              android:layout_alignParentLeft="true"
              android:layout_alignParentRight="true"
              android:background="@drawable/sign_up_shape"
              android:fontFamily="@font/poppins_medium"
              android:lineHeight="22sp"
              android:text="@string/next_button"
              android:textAllCaps="false"
              android:textColor="@color/white"
              android:textSize="16sp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/ed_your_country" />

     </androidx.constraintlayout.widget.ConstraintLayout>
</layout>