<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.activity.LocationActivity">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <ImageView
        android:id="@+id/iv_ellipse_image"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ellipse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_location_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/location"
        app:layout_constraintBottom_toBottomOf="@+id/iv_ellipse_image"
        app:layout_constraintEnd_toEndOf="@+id/iv_ellipse_image"
        app:layout_constraintStart_toStartOf="@+id/iv_ellipse_image"
        app:layout_constraintTop_toTopOf="@+id/iv_ellipse_image"
        />

    <ImageView
        android:id="@+id/iv_small_ellipse_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/small_ellipse"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_location_image"
        app:layout_constraintEnd_toEndOf="@+id/iv_location_image"
        app:layout_constraintStart_toStartOf="@+id/iv_location_image"
        app:layout_constraintTop_toTopOf="@+id/iv_location_image" />

    <TextView
        android:id="@+id/tv_discover_travel_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_medium"
        android:lineHeight="36sp"
        android:text="@string/discover_travel_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_ellipse_image"
        android:layout_marginRight="31dp"
        android:layout_marginLeft="24dp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_allow_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/alllow_location_data_shape"
        android:backgroundTint="#FF9D55"
        android:fontFamily="@font/poppins_medium"
        android:lineHeight="22sp"
        android:text="@string/button_allow_location"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_discover_travel_text" />

    <TextView
        android:id="@+id/tv_not_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_now"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_allow_location" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>